fix URI warning